add plot and additionl references

--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2022-08-31 19:44:09 -0500 
+%% Created for Andrew Gard at 2023-08-10 14:35:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{wilhelm2017flora,
+	author = {Wilhelm, Gerould and Rericha, Laura},
+	date-added = {2023-08-10 14:34:57 -0500},
+	date-modified = {2023-08-10 14:34:57 -0500},
+	organization = {Indiana Academy of Science Indianapolis},
+	title = {Flora of the Chicago region: A floristic and ecological synthesis},
+	year = {2017}}
 
 @article{oldham1995floristic,
 	author = {Oldham, MJ and Bakowsky, WD and Sutherland, DA},
@@ -36,7 +44,8 @@
 	title = {Testing the efficacy of species richness and floristic quality assessment of quality, temporal change, and fire effects in tallgrass prairie natural areas},
 	url = {https://doi.org/10.3375/0885-8608(2006)26[17:TTEOSR]2.0.CO;2},
 	volume = {26},
-	year = {2006}}
+	year = {2006},
+	bdsk-url-1 = {https://doi.org/10.3375/0885-8608(2006)26%5B17:TTEOSR%5D2.0.CO;2}}
 
 @article{bauer,
 	author = {Bauer, J., Koziol, L., & Bever, J.},
@@ -95,7 +104,8 @@
 	title = {Ecological checklist of the Missouri flora for floristic quality assessment},
 	url = {https://www.biodiversitylibrary.org/part/175050},
 	volume = {12},
-	year = {2015}}
+	year = {2015},
+	bdsk-url-1 = {https://www.biodiversitylibrary.org/part/175050}}
 
 @manual{Wickham:2022vf,
 	author = {Hadley Wickham and Romain Fran{\c c}ois and Lionel Henry and Kirill M{\"u}ller},
@@ -146,7 +156,8 @@
 	date-modified = {2022-08-31 19:41:34 -0500},
 	title = {A Users Guide to Floristic Quality Assessment (FQI and Mean C)},
 	url = {http://www.wildthingscommunity.org/wild-things-conferences/wild-things-2015},
-	year = {2015}}
+	year = {2015},
+	bdsk-url-1 = {http://www.wildthingscommunity.org/wild-things-conferences/wild-things-2015}}
 
 @article{spyreas2019floristic,
 	author = {Spyreas, Greg},
@@ -171,4 +182,5 @@
 	title = {The Universal Floristic Quality Assessment (FQA) Calculator: an online tool for ecological assessment and monitoring},
 	url = {https://doi.org/10.1111/2041-210X.12491},
 	volume = {7},
-	year = {2016}}
+	year = {2016},
+	bdsk-url-1 = {https://doi.org/10.1111/2041-210X.12491}}
