copy edit and update references

--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,12 +1,35 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2023-08-10 14:35:11 -0500 
+%% Created for Andrew Gard at 2023-08-11 13:27:04 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{matthews2015null,
+	author = {Matthews, Jeffrey W and Spyreas, Greg and Long, Colleen M},
+	date-added = {2023-08-11 13:27:00 -0500},
+	date-modified = {2023-08-11 13:27:00 -0500},
+	journal = {Ecological Indicators},
+	pages = {1--7},
+	publisher = {Elsevier},
+	title = {A null model test of Floristic Quality Assessment: Are plant species' Coefficients of Conservatism valid?},
+	volume = {52},
+	year = {2015}}
+
+@article{bourdaghs2006properties,
+	author = {Bourdaghs, Michael and Johnston, Carol A and Regal, Ronald R},
+	date-added = {2023-08-11 12:48:37 -0500},
+	date-modified = {2023-08-11 12:48:37 -0500},
+	journal = {Wetlands},
+	number = {3},
+	pages = {718--735},
+	publisher = {Springer},
+	title = {Properties and performance of the floristic quality index in Great Lakes coastal wetlands},
+	volume = {26},
+	year = {2006}}
 
 @inproceedings{wilhelm2017flora,
 	author = {Wilhelm, Gerould and Rericha, Laura},
