--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrew Gard at 2024-04-14 10:37:20 -0500 
+%% Created for Andrew Gard at 2024-04-20 10:22:56 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,16 +11,17 @@
 @manual{fqadata,
 	author = {Iris Foxfoot},
 	date-added = {2024-04-14 10:36:45 -0500},
-	date-modified = {2024-04-14 10:37:16 -0500},
-	title = {fqadata: Contains Regional Floristic Quality Assessment Databases},
+	date-modified = {2024-04-20 08:45:54 -0500},
+	title = {{fqadata}: Contains Regional Floristic Quality Assessment Databases},
 	url = {https://CRAN.R-project.org/package=fqadata},
-	year = {2023}}
+	year = {2023},
+	bdsk-url-1 = {https://CRAN.R-project.org/package=fqadata}}
 
 @manual{fqacalc,
 	author = {Iris Foxfoot},
 	date-added = {2024-04-14 10:34:05 -0500},
-	date-modified = {2024-04-14 10:35:36 -0500},
-	title = {fqacalc: Calculate Floristic Quality Assessment Metrics},
+	date-modified = {2024-04-20 08:45:42 -0500},
+	title = {{fqacalc}: Calculate Floristic Quality Assessment Metrics},
 	url = {https://CRAN.R-project.org/package=fqacalc},
 	year = {2023},
 	bdsk-url-1 = {https://CRAN.R-project.org/package=fqacalc}}
@@ -44,23 +45,25 @@
 @article{matthews2015null,
 	author = {Matthews, Jeffrey W and Spyreas, Greg and Long, Colleen M},
 	date-added = {2023-08-11 13:27:00 -0500},
-	date-modified = {2023-08-11 13:27:00 -0500},
+	date-modified = {2024-04-20 08:56:53 -0500},
 	journal = {Ecological Indicators},
 	pages = {1--7},
 	publisher = {Elsevier},
 	title = {A null model test of Floristic Quality Assessment: Are plant species' Coefficients of Conservatism valid?},
+	url = {https://doi.org/10.1016/j.ecolind.2014.11.017},
 	volume = {52},
 	year = {2015}}
 
 @article{bourdaghs2006properties,
 	author = {Bourdaghs, Michael and Johnston, Carol A and Regal, Ronald R},
 	date-added = {2023-08-11 12:48:37 -0500},
-	date-modified = {2023-08-11 12:48:37 -0500},
+	date-modified = {2024-04-20 08:54:24 -0500},
 	journal = {Wetlands},
 	number = {3},
 	pages = {718--735},
 	publisher = {Springer},
 	title = {Properties and performance of the floristic quality index in Great Lakes coastal wetlands},
+	url = {https://doi.org/10.1672/0277-5212(2006)26[718:PAPOTF]2.0.CO;2},
 	volume = {26},
 	year = {2006}}
 
@@ -71,23 +74,6 @@
 	organization = {Indiana Academy of Science Indianapolis},
 	title = {Flora of the Chicago region: A floristic and ecological synthesis},
 	year = {2017}}
-
-@article{oldham1995floristic,
-	author = {Oldham, MJ and Bakowsky, WD and Sutherland, DA},
-	date-added = {2022-08-30 10:59:12 -0500},
-	date-modified = {2022-08-30 10:59:12 -0500},
-	journal = {Ontario. Natural Heritage Information Center Report, Ministry of Natural Resources, Peterborough, Ontario, Canada},
-	title = {Floristic Quality Assessment System},
-	year = {1995},
-	bdsk-url-1 = {http://dx.doi.org/10.13140/RG.2.2.35685.91360}}
-
-@article{freeman2012coefficients,
-	author = {Freeman, Craig C},
-	date-added = {2022-08-30 10:23:15 -0500},
-	date-modified = {2022-08-30 10:23:15 -0500},
-	journal = {Kansas Biological Survey \& RL McGregor Herbarium http://ksnhi. ku. edu/resources/plants},
-	title = {Coefficients of conservatism for Kansas vascular plants (2012) and selected life history attributes},
-	year = {2012}}
 
 @article{bowles2006testing,
 	author = {Bowles, Marlin and Jones, Michael},
@@ -126,8 +112,11 @@
 	bdsk-url-1 = {https://doi.org/10.1016/j.ecolind.2020.107078}}
 
 @webpage{naturecite,
+	author = {Thomas, Justin, and Thomas, Dana},
 	date-added = {2022-08-25 13:21:07 -0500},
-	date-modified = {2022-08-25 13:22:08 -0500},
+	date-modified = {2024-04-20 09:12:37 -0500},
+	lastchecked = {20 April 2024},
+	title = {NatureCite: Center for Integrated Taxonomy and Ecology},
 	url = {https://www.naturecite.org/},
 	bdsk-url-1 = {https://www.naturecite.org/}}
 
@@ -150,37 +139,6 @@
 	title = {Flora of the Chicago Region: A Floristic and Ecological Synthesis},
 	year = {2017}}
 
-@article{ladd2015ecological,
-	author = {Ladd, Douglas and Thomas, Justin R},
-	date-added = {2022-08-25 12:40:17 -0500},
-	date-modified = {2022-08-31 17:58:47 -0500},
-	journal = {Phytoneuron},
-	number = {1},
-	pages = {1--274},
-	title = {Ecological checklist of the Missouri flora for floristic quality assessment},
-	url = {https://www.biodiversitylibrary.org/part/175050},
-	volume = {12},
-	year = {2015},
-	bdsk-url-1 = {https://www.biodiversitylibrary.org/part/175050}}
-
-@manual{Wickham:2022vf,
-	author = {Hadley Wickham and Romain Fran{\c c}ois and Lionel Henry and Kirill M{\"u}ller},
-	date-added = {2022-08-25 12:36:12 -0500},
-	date-modified = {2022-08-25 12:36:12 -0500},
-	note = {R package version 1.0.9},
-	title = {dplyr: A Grammar of Data Manipulation},
-	url = {https://CRAN.R-project.org/package=dplyr},
-	year = {2022},
-	bdsk-url-1 = {https://CRAN.R-project.org/package=dplyr}}
-
-@techreport{wilhelm1977,
-	author = {Gerould Wilhelm},
-	date-added = {2022-08-25 09:15:42 -0500},
-	date-modified = {2022-08-25 09:17:19 -0500},
-	institution = {Kane county urban development division},
-	title = {Ecological assessment of open land areas in Kane County, Illinois},
-	year = {1977}}
-
 @inproceedings{swink1994plants,
 	author = {Swink, Floyd and Wilhelm, Gerould and others},
 	date-added = {2022-08-18 14:00:38 -0500},
@@ -189,25 +147,16 @@
 	title = {Plants of the Chicago region},
 	year = {1994}}
 
-@inproceedings{spyreas2015users,
-	author = {Spyreas, Greg},
-	booktitle = {Wild Things Conference 2015},
-	date-added = {2022-08-18 13:59:15 -0500},
-	date-modified = {2022-08-31 19:41:34 -0500},
-	title = {A Users Guide to Floristic Quality Assessment (FQI and Mean C)},
-	url = {http://www.wildthingscommunity.org/wild-things-conferences/wild-things-2015},
-	year = {2015},
-	bdsk-url-1 = {http://www.wildthingscommunity.org/wild-things-conferences/wild-things-2015}}
-
 @article{spyreas2019floristic,
 	author = {Spyreas, Greg},
 	date-added = {2022-08-18 13:58:45 -0500},
-	date-modified = {2022-08-18 13:58:45 -0500},
+	date-modified = {2024-04-20 08:59:31 -0500},
 	journal = {Ecosphere},
 	number = {8},
 	pages = {e02825},
 	publisher = {Wiley Online Library},
 	title = {Floristic Quality Assessment: a critique, a defense, and a primer},
+	url = {https://doi.org/10.1002/ecs2.2825},
 	volume = {10},
 	year = {2019}}
 
