Add DOIs, ISBN, cite books

--- a/paper/fqar_refs.bib
+++ b/paper/fqar_refs.bib
@@ -51,6 +51,7 @@
 	publisher = {Elsevier},
 	title = {A null model test of Floristic Quality Assessment: Are plant species' Coefficients of Conservatism valid?},
 	url = {https://doi.org/10.1016/j.ecolind.2014.11.017},
+        doi = {10.1016/j.ecolind.2014.11.017},
 	volume = {52},
 	year = {2015}}
 
@@ -62,18 +63,11 @@
 	number = {3},
 	pages = {718--735},
 	publisher = {Springer},
-	title = {Properties and performance of the floristic quality index in Great Lakes coastal wetlands},
+	title = {Properties and performance of the floristic quality index in {Great Lakes} coastal wetlands},
 	url = {https://doi.org/10.1672/0277-5212(2006)26[718:PAPOTF]2.0.CO;2},
+        doi = {10.1672/0277-5212(2006)26[718:papotf]2.0.co;2},
 	volume = {26},
 	year = {2006}}
-
-@inproceedings{wilhelm2017flora,
-	author = {Wilhelm, Gerould and Rericha, Laura},
-	date-added = {2023-08-10 14:34:57 -0500},
-	date-modified = {2023-08-10 14:34:57 -0500},
-	organization = {Indiana Academy of Science Indianapolis},
-	title = {Flora of the Chicago region: A floristic and ecological synthesis},
-	year = {2017}}
 
 @article{bowles2006testing,
 	author = {Bowles, Marlin and Jones, Michael},
@@ -85,6 +79,7 @@
 	publisher = {BioOne},
 	title = {Testing the efficacy of species richness and floristic quality assessment of quality, temporal change, and fire effects in tallgrass prairie natural areas},
 	url = {https://doi.org/10.3375/0885-8608(2006)26[17:TTEOSR]2.0.CO;2},
+        doi = {10.3375/0885-8608(2006)26[17:tteosr]2.0.co;2},
 	volume = {26},
 	year = {2006},
 	bdsk-url-1 = {https://doi.org/10.3375/0885-8608(2006)26%5B17:TTEOSR%5D2.0.CO;2}}
@@ -96,6 +91,7 @@
 	journal = {AoB PLANTS},
 	title = {Ecology of Floristic Quality Assessment: testing for correlations between coefficients of conservatism, species traits and mycorrhizal responsiveness},
 	url = {https://doi.org/10.1093/aobpla/plx073},
+        doi = {10.1093/aobpla/plx073},
 	volume = 10,
 	year = 2018,
 	bdsk-url-1 = {https://doi.org/10.1093/aobpla/plx073}}
@@ -107,18 +103,10 @@
 	journal = {Ecological Indicators},
 	title = {Niche ecology in Floristic Quality Assessment: Are species with higher conservatism more specialized?},
 	url = {https://doi.org/10.1016/j.ecolind.2020.107078},
+        doi = {10.1016/j.ecolind.2020.107078},
 	volume = 121,
 	year = 2021,
 	bdsk-url-1 = {https://doi.org/10.1016/j.ecolind.2020.107078}}
-
-@webpage{naturecite,
-	author = {Thomas, Justin, and Thomas, Dana},
-	date-added = {2022-08-25 13:21:07 -0500},
-	date-modified = {2024-04-20 09:12:37 -0500},
-	lastchecked = {20 April 2024},
-	title = {NatureCite: Center for Integrated Taxonomy and Ecology},
-	url = {https://www.naturecite.org/},
-	bdsk-url-1 = {https://www.naturecite.org/}}
 
 @manual{rcore,
 	address = {Vienna, Austria},
@@ -136,15 +124,17 @@
 	date-added = {2022-08-25 12:52:27 -0500},
 	date-modified = {2022-08-25 12:54:13 -0500},
 	publisher = {Indiana Academy of Sciences},
-	title = {Flora of the Chicago Region: A Floristic and Ecological Synthesis},
+	title = {Flora of the {Chicago} Region: A Floristic and Ecological Synthesis},
+        isbn = {9781883362157},
 	year = {2017}}
 
-@inproceedings{swink1994plants,
-	author = {Swink, Floyd and Wilhelm, Gerould and others},
+@book{swink1994plants,
+	author = {Swink, Floyd and Wilhelm, Gerould},
 	date-added = {2022-08-18 14:00:38 -0500},
 	date-modified = {2022-08-18 14:00:38 -0500},
 	organization = {Indiana Academy of Science},
-	title = {Plants of the Chicago region},
+	title = {Plants of the {Chicago} region},
+        isbn = {1883362016},
 	year = {1994}}
 
 @article{spyreas2019floristic,
@@ -157,6 +147,7 @@
 	publisher = {Wiley Online Library},
 	title = {Floristic Quality Assessment: a critique, a defense, and a primer},
 	url = {https://doi.org/10.1002/ecs2.2825},
+        doi = {10.1002/ecs2.2825},
 	volume = {10},
 	year = {2019}}
 
@@ -170,6 +161,7 @@
 	publisher = {Wiley Online Library},
 	title = {The Universal Floristic Quality Assessment (FQA) Calculator: an online tool for ecological assessment and monitoring},
 	url = {https://doi.org/10.1111/2041-210X.12491},
+        doi = {10.1002/ecs2.2825},
 	volume = {7},
 	year = {2016},
 	bdsk-url-1 = {https://doi.org/10.1111/2041-210X.12491}}
